--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.AmaKotlin" parent="Base.Theme.AmaKotlin" />
+    <style name="Button3Style" parent="Theme.AppCompat.Light">
+        <item name="colorButtonNormal">@color/design_default_color_primary</item>
+        <item name="colorControlHighlight">@color/design_default_color_primary_dark</item>
+    </style>
 </resources>
