--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/swipe_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <WebView
-            android:id="@+id/webview"
+            android:id="@+id/webView"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
@@ -27,10 +26,10 @@
                 android:background="@drawable/bg_main"/>
             <ImageView
                 android:id="@+id/app_logo"
-                android:layout_width="180dp"
+                android:layout_width="100dp"
                 android:layout_height="180dp"
                 android:contentDescription="@string/app_name"
-                android:src="@drawable/ic_logo"
+                android:src="@drawable/ic_ama_logo"
                 android:layout_marginTop="139dp"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true" />
@@ -40,7 +39,7 @@
                 android:text="@string/app_name"
                 android:layout_below="@+id/app_logo"
                 android:layout_marginTop="20dp"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textColor="#fff"
                 android:visibility="gone"
                 android:textStyle="bold"
@@ -57,18 +56,19 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Made with"
+                    android:text="@string/made_with"
                     android:textColor="@color/white"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
+                    android:contentDescription="@string/footer_icon"
                     app:srcCompat="@drawable/ic_love" />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="InfixSoft"
+                    android:text="@string/anshu_memorial_academy"
                     android:textColor="@color/white" />
             </LinearLayout>
         </RelativeLayout>
@@ -97,10 +97,10 @@
                 android:id="@+id/txt_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Whoops!"
+                android:text="@string/whoops"
                 android:layout_below="@+id/img_no_internet"
                 android:layout_marginTop="20dp"
-                android:textSize="35dp"
+                android:textSize="35sp"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 android:layout_centerHorizontal="true"/>
@@ -110,11 +110,11 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/txt_title"
                 android:layout_marginTop="20dp"
-                android:textSize="18dp"
+                android:textSize="18sp"
                 android:textColor="@color/white"
                 android:layout_centerHorizontal="true"
                 android:textAlignment="center"
-                android:text="No internet found. \nCheck your connection or try again"/>
+                android:text="@string/no_internet_found_ncheck_your_connection_or_try_again"/>
             <Button
                 android:id="@+id/btn_try_again"
                 android:layout_width="200dp"
@@ -124,7 +124,7 @@
                 android:layout_below="@+id/txt_detail"
                 android:theme="@style/Button3Style"
                 android:textColor="@color/white"
-                android:text="Try Again"/>
+                android:text="@string/try_again"/>
         </RelativeLayout>
         <ProgressBar
             android:id="@+id/progressBar"
